# TDS_PROJECT_2

./: .env  LICENSE  README.md  autolysis.py  pyproject.toml
goodreads/: README.md  extracted_code.py  log.txt
happiness/: README.md  extracted_code.py
media/: README.md  extracted_code.py
